@@ -24,6 +24,7 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 === TinkerPop 3.4.4 (Release Date: NOT OFFICIALLY RELEASED YET)
 
 * Provided support for DSLs by way of remote connections through `AnonymousTraversalSource`.
+* Added GraphBinary support for Python.
 
 [[release-3-4-3]]
 === TinkerPop 3.4.3 (Release Date: August 5, 2019)
